# asta-paper-finder-ui

./: .gitignore  ASTA_Project_Report.md  LOCAL_DEPLOYMENT_NOTES.md  README.md  TECHNICAL_MANUAL.md  generate_report.py  pyproject.toml
Report/: ASTA_Project_Report.docx
agents/mabool/api/: pyproject.toml  start.sh
agents/mabool/api/conf/: config.toml
agents/mabool/api/mabool/agents/broad_search_by_keyword/: broad_search_by_keyword_agent.py
agents/mabool/api/mabool/agents/complex_search/: fast_broad_search.py
agents/mabool/api/mabool/agents/dense/: dense_agent.py  formulation.py
agents/mabool/api/mabool/agents/llm_suggestion/: llm_suggestion_agent.py
agents/mabool/api/mabool/agents/local_dense/: qdrant_index.py
agents/mabool/api/mabool/agents/query_analyzer/: query_analyzer.py
agents/mabool/api/mabool/agents/query_refusal/: utils.py
agents/mabool/api/mabool/api/: app.py  auth.py  history_routes.py  review_routes.py  stream_routes.py
agents/mabool/api/mabool/data_model/: config.py
agents/mabool/api/mabool/services/: services_deps.py
agents/mabool/api/mabool/utils/: llm_utils.py
agents/mabool/api/static/: index.html
libs/chain/: .coveragerc  pyproject.toml
libs/chain/ai2i/chain/: __init__.py  builders.py  computation.py  endpoints.py  models.py  moderation.py  params.py  retry.py
libs/chain/ai2i/chain/gemini/: async_genai.py
libs/chain/ai2i/chain/tests/: test_builders.py  test_computation.py  test_endpoints.py  test_models.py
libs/dcollection/: pyproject.toml
scripts/: seed_qdrant.py
(+3 files in other folders)
